terraform_02/main.tf
# Key Pair
resource "aws_key_pair" "my_key" {
  key_name   = "my-key"
  public_key = file("my_key.pub")
}

# Default VPC
resource "aws_default_vpc" "default" {
  tags = {
    Name = "Default VPC"
  }
}

# Default Subnet in ap-south-1a
resource "aws_default_subnet" "default_a" {
  availability_zone = "ap-south-1a"
}

# Security Group
resource "aws_security_group" "my_security_group" {
  name        = "my-security-group"
  description = "Allow SSH and HTTP"
  vpc_id      = aws_default_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP (8080)"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2 Instance
resource "aws_instance" "my_instance" {
  for_each = {
    "ubuntu" = {
      instance_type = "t2.micro"
      volume_size   = 8
    }
    "windows" = {
      instance_type = "t2.medium"
      volume_size   = 12
    }
  }
  depends_on = [ aws_key_pair.my_key, aws_security_group.my_security_group ]
  ami                    = var.ec2_ami_id
  instance_type          = each.value.instance_type
  key_name               = aws_key_pair.my_key.key_name
  subnet_id              = aws_default_subnet.default_a.id
  vpc_security_group_ids = [aws_security_group.my_security_group.id]
  user_data              = file("install_nginx.sh")

  root_block_device {
    volume_size = each.value.volume_size   # var.env=="dev" ? 10 : 20
  }

  tags = {
    Name = each.key
  }
}

#  import existing ec2 instance.  docks of terra import affter this improve with the ami, instance_type,tag
# resource "aws_instance" "existing_instance" {
#   ami = "unknown"
#   instance_type = "unknown"
# }
